Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
         <h1>
 <a id="3-8" class="anchor" href="#3-8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>3-8</h1>
 
+<ul>
+<li>궁금하거나 이야기 하고 싶을 때는 <a href="https://padlet.com/dreamkii816/38">여기!</a>
+</li>
+</ul>
+
 <hr>
 
 <h4>
